--- a/src/pages/visuals/Visuals.module.css
+++ b/src/pages/visuals/Visuals.module.css
@@ -115,11 +115,18 @@
   transform: rotateY(180deg);
 }
 
-.flipCardFront, .flipCardBack {
+.flipCardFront{
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* for Safari */
+  backface-visibility: hidden;
+  box-sizing: border-box;
+}
+
+.flipCardBack {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   backface-visibility: hidden;
   box-sizing: border-box;
 }
@@ -133,9 +140,4 @@
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
-}
-
-.flipCard, .flipCardInner {
-  -webkit-transform-style: preserve-3d;  /* for Safari */
-  transform-style: preserve-3d;
 }
