--- a/src/pages/visuals/Visuals.module.css
+++ b/src/pages/visuals/Visuals.module.css
@@ -44,6 +44,7 @@
     opacity: 1;
   }
 }
+
 .content {
   display: flex;
   flex-direction: column;
@@ -72,7 +73,6 @@
   margin: auto;
 }
 
-
 .imageContainer {
   width: 100%;
   max-width: 480px; /* Adjust as needed */
@@ -86,7 +86,6 @@
   object-fit: cover;
 }
 
-
 .center {
   display: grid;
   place-items: center; /* shorthand for align-items + justify-items */
@@ -97,10 +96,11 @@
   background-color: transparent;
   width: 200px;
   height: 200px;
-  perspective: 1000px; 
-  margin: 20%;
+  perspective: 1000px;
+  margin: 20% 5%;  /* You can adjust these values */
   object-fit: cover;
 }
+
 
 .flipCardInner {
   position: relative;
@@ -115,29 +115,26 @@
   transform: rotateY(180deg);
 }
 
-.flipCardFront{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  box-sizing: border-box;
-}
-
-.flipCardBack {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  box-sizing: border-box;
-}
-
 .flipCardFront {
+  position: absolute;
+  width: 100%;
+  height: 200px; /* Make sure this matches the height of flipCard if you update it */
+  backface-visibility: hidden;
+  box-sizing: border-box;
   background-color: #bbb;
   color: black;
 }
 
+
 .flipCardBack {
-  background-color: dodgerblue;
-  color: white;
+  position: absolute;
+  width: 100%;
+  height: 300px; /* Updated */
+  backface-visibility: hidden;
+  box-sizing: border-box;
+  background-color: rgba(30, 144, 255, 0.8);  /* Change background color */
+  color: black;  /* Change font color to black */
   transform: rotateY(180deg);
+  font-size: 16px;  /* Adjust font size */
+  line-height: 1.5;  /* Adjust line height */
 }
